--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -3,6 +3,13 @@
     <head>
     </head>
     <body>
-        hello world!
+        <div>hello world!</div>
+        <div>
+        {% if cheezit != None %}
+            {{ cheezit }}
+        {% else %}
+            bruh put in a GET query for 'dog'
+        {% endif %}
+        </div>
     </body>
 </html>
