--- a/homepage/templates/login.html
+++ b/homepage/templates/login.html
@@ -3,10 +3,7 @@
 {% block content %}
     <form action="/login/" method="POST">
         {% csrf_token %}
-        <label for="username">username:</label>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">password:</label>
-        <input type="password" id="password" name="password"><br>
+        {{ form }}
         <input type="submit" value="login">
     </form>
 {% endblock %}
