--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -4,6 +4,9 @@
     <div>hello world!</div>
     {% if username %}
     <div>you are currently logged in as {{username}}</div>
+    <div><a href="/songs/">media list</a></div>
+    <div><a href="/upload/">upload new media</a></div>
+    {% else %}
+    <div><a href="/login/">login</a></div>
     {% endif %}
-    <div><a href="/login/">click here to go to the login page</a></div>
 {% endblock %}
