changed media list

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -4,7 +4,7 @@
     <div>hello world!</div>
     {% if username %}
     <div>you are currently logged in as {{username}}</div>
-    <div><a href="/songs/">media list</a></div>
+    <div><a href="/mymedia/">media list</a></div>
     <div><a href="/upload/">upload new media</a></div>
     {% else %}
     <div><a href="/login/">login</a></div>
