--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en_us">
     <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
     <body>
         {% if messages %}
             {% for message in messages %}
-                <div{% if message.tags %} class="{{message.tags}}" {% endif %}>
+                <div class="jumbotron"{% if message.tags %} class="{{message.tags}}"{% endif %}>
                     {{ message }}
                 </div>
             {% endfor %}
