updated homepage and un-containered message divs

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div>hello world!</div>
-    {% if username %}
-    <div>you are currently logged in as {{username}}</div>
-    <div><a href="/mymedia/">media list</a></div>
-    <div><a href="/upload/">upload new media</a></div>
-    {% else %}
-    <div><a href="/login/">login</a></div>
-    {% endif %}
+    <div style="text-align: center">
+        <!--I have no idea how well this works on mobile-->
+        <h1 style="font-size: 4vw">media server</h1>
+        {% if username %}
+        <div style="font-size: 2vw">you are currently logged in as {{username}}</div>
+        <div style="font-size: 3vw"><a href="/mymedia/">media list</a></div>
+        <div style="font-size: 3vw"><a href="/upload/">upload new media</a></div>
+        {% else %}
+        <div style="font-size: 3vw"><a href="/login/">login</a></div>
+        {% endif %}
+    </div>
 {% endblock %}
