--- a/homepage/templates/form.html
+++ b/homepage/templates/form.html
@@ -6,17 +6,17 @@
         <div class="container">
             {% for field in form %}
             <div class="form-group">
-                <label for="{{field.name}}">{{field.label}}:</label>
+                <label class="small-text" for="{{field.name}}">{{field.label}}:</label>
                 {{field}}
             </div>
             {% endfor %}
             {% if fileupload %}
             <div class="form-group">
-                <label for="mediafile">File:</label>
+                <label class="small-text" for="mediafile">File:</label>
                 <input type="file" name="mediafile">
             </div>
             {% endif %}
-            <input type="submit" class="btn btn-primary" value="{{ action }}">
+            <input type="submit" class="btn btn-primary " value="{{ action }}">
         </div>
     </form>
 {% endblock %}
