--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -2,10 +2,10 @@
 <html lang="en_us">
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        {% if request.user_agent.is_mobile %}
-        <link rel="stylesheet" type="text/css" href="/static/mymobilestyle.css">
-        {% else %}
+        {% if request.user_agent.is_pc %}
         <link rel="stylesheet" type="text/css" href="/static/mydesktopstyle.css">
+        {% else %}
+        <link rel="stylesheet" type="text/css" href="/static/mymobilestyle.css">
         {% endif %}
         
     </head>
