--- a/homepage/templates/player.html
+++ b/homepage/templates/player.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="warning"></div>
-<video id="video" width="800" controls></video>
+<video id="video" width="800" controls playsinline></video>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <script>
     var id = new URLSearchParams(new URL(window.location.href).search).get("media");
