changed CSS for better font readability

--- a/deployproxy/staticfiles/mydesktopstyle.css
+++ b/deployproxy/staticfiles/mydesktopstyle.css
@@ -1,10 +1,10 @@
 /* desktop */
 .big-text {
-    font-size: 3vw;
+    font-size: 50px;
 }
 .medium-text {
-    font-size: 2vw;
+    font-size: 25px;
 }
 .small-text {
-    font-size: 1.5vw;
+    font-size: 20px;
 }
