--- a/deployproxy/staticfiles/mymobilestyle.css
+++ b/deployproxy/staticfiles/mymobilestyle.css
@@ -1,10 +1,10 @@
 /* mobile */
 .big-text {
-    font-size: 6vw;
+    font-size: 80px;
 }
 .medium-text {
-    font-size: 4vw;
+    font-size: 50px;
 }
 .small-text {
-    font-size: 3vw;
+    font-size: 40px;
 }
