--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
+{% block title %}Media Server{% endblock %}
+
 {% block content %}
     <div style="text-align: center">
-        <!--I have no idea how well this works on mobile-->
         <h1 class="big-text">media server</h1>
         {% if username %}
-        <div class="small-text">you are currently logged in as {{username}}</div>
+        <div class="small-text">you are currently logged in as {{ username }}</div>
         <div class="medium-text"><a href="/mymedia/">media list</a></div>
         <div class="medium-text"><a href="/upload/">upload new media</a></div>
         {% else %}
