--- a/homepage/templates/media.html
+++ b/homepage/templates/media.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Media List{% endblock %}
+
 {% block content %}
 <table class="table table-hover">
     <thead>
