--- a/homepage/templates/player.html
+++ b/homepage/templates/player.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Media Player{% endblock %}
+
 {% block content %}
 <div id="warning"></div>
 <video id="video" height="500" controls playsinline></video>
