added github link to bottom of home page

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -13,4 +13,7 @@
         <div class="medium-text"><a href="/login/">login</a></div>
         {% endif %}
     </div>
+    <div class="col-sm-12" style="text-align: center; position: fixed; bottom: 0">
+        <a href="https://github.com/urlordjames/musicserver">licensed under MIT by urlordjames</a>
+    </div>
 {% endblock %}
