--- a/homepage/templates/form.html
+++ b/homepage/templates/form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ action }}{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
     <form action="{{ destination }}" method="POST" enctype="multipart/form-data">
