added public media list

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -7,11 +7,12 @@
         <h1 class="big-text">media server</h1>
         {% if username %}
         <div class="small-text">you are currently logged in as {{ username }}</div>
-        <div class="medium-text"><a href="/mymedia/">media list</a></div>
+        <div class="medium-text"><a href="/mymedia/">your media</a></div>
         <div class="medium-text"><a href="/upload/">upload new media</a></div>
         {% else %}
         <div class="medium-text"><a href="/login/">login</a></div>
         {% endif %}
+        <div class="medium-text"><a href="/media/">public media list</a></div>
     </div>
     <div class="col-sm-12 small-text" style="text-align: center; position: fixed; bottom: 0">
         <a href="https://github.com/urlordjames/musicserver">licensed under MIT by urlordjames</a>
