changed URL for public media list because it conflicts with another URL

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -12,7 +12,7 @@
         {% else %}
         <div class="medium-text"><a href="/login/">login</a></div>
         {% endif %}
-        <div class="medium-text"><a href="/media/">public media list</a></div>
+        <div class="medium-text"><a href="/publicmedia/">public media list</a></div>
     </div>
     <div class="col-sm-12 small-text" style="text-align: center; position: fixed; bottom: 0">
         <a href="https://github.com/urlordjames/musicserver">licensed under MIT by urlordjames</a>
