--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -9,6 +9,7 @@
         <div class="small-text">you are currently logged in as {{ username }}</div>
         <div class="medium-text"><a href="/mymedia/">your media</a></div>
         <div class="medium-text"><a href="/upload/">upload new media</a></div>
+        <div class="medium-text"><a href="/logout/">logout</a></div>
         {% else %}
         <div class="medium-text"><a href="/login/">login</a></div>
         {% endif %}
