added password reset

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -10,6 +10,7 @@
         <div class="medium-text"><a href="/mymedia/">your media</a></div>
         <div class="medium-text"><a href="/upload/">upload new media</a></div>
         <div class="medium-text"><a href="/logout/">logout</a></div>
+        <div class="medium-text"><a href="/resetpassword/">reset password</a></div>
         {% else %}
         <div class="medium-text"><a href="/login/">login</a></div>
         {% endif %}
