--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -7,6 +7,9 @@
         <h1 class="big-text">media server</h1>
         {% if username %}
         <div class="small-text">you are currently logged in as {{ username }}</div>
+        {% endif %}
+        <div class="medium-text"><a href="/publicmedia/">public media list</a></div>
+        {% if request.user.is_authenticated %}
         <div class="medium-text"><a href="/mymedia/">your media</a></div>
         <div class="medium-text"><a href="/upload/">upload new media</a></div>
         <div class="medium-text"><a href="/logout/">logout</a></div>
@@ -14,7 +17,6 @@
         {% else %}
         <div class="medium-text"><a href="/login/">login</a></div>
         {% endif %}
-        <div class="medium-text"><a href="/publicmedia/">public media list</a></div>
     </div>
     <div class="col-sm-12 small-text" style="text-align: center; position: fixed; bottom: 0">
         <a href="https://github.com/urlordjames/musicserver">licensed under MIT by urlordjames</a>
