added old password check for password reset and made more inputs required

--- a/homepage/templates/form.html
+++ b/homepage/templates/form.html
@@ -15,7 +15,7 @@
             {% if fileupload %}
             <div class="form-group">
                 <label class="small-text" for="mediafile">File:</label>
-                <input type="file" name="mediafile">
+                <input type="file" name="mediafile" required>
             </div>
             {% endif %}
             <input type="submit" class="btn btn-primary" value="{{ action }}">
