--- a/homepage/templates/passwordreset.html
+++ b/homepage/templates/passwordreset.html
@@ -10,8 +10,10 @@
         {% csrf_token %}
         <div class="container">
             <div class="form-group">
+                <label class="small-text" for="oldpassword">Old Password:</label>
+                <input class="form-control" type="password" id="oldpassword" name="oldpassword" required>
                 <label class="small-text" for="password">New Password:</label>
-                <input class="form-control" type="password" id="password" name="password">
+                <input class="form-control" type="password" id="password" name="password" required>
             </div>
             <input type="submit" class="btn btn-danger" value="Reset Password">
         </div>
