--- a/homepage/templates/edit.html
+++ b/homepage/templates/edit.html
@@ -14,6 +14,7 @@
                 <label class="small-text" for="privacy">Privacy:</label>
                 <select name="privacy" class="form-control" id="privacy">
                     <option value="private" selected="">Private</option>
+                    <option value="unlisted">Unlisted</option>
                     <option value="public">Public</option>
                 </select>
             </div>
