--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -8,25 +8,26 @@
         {% else %}
         <link rel="stylesheet" type="text/css" href="/static/mymobilestyle.css">
         {% endif %}
+        <link rel="stylesheet" type="text/css" href="/static/common.css">
         {% block head %}{% endblock %}
     </head>
     <body>
         {% if messages %}
             {% for message in messages %}
                 {% if message.tags == "success" %}
-                    <div class="alert alert-success small-text"}>
+                    <div class="alert alert-success small-text">
                         {{ message }}
                     </div>
                 {% elif message.tags == "error" %}
-                    <div class="alert alert-danger small-text"}>
+                    <div class="alert alert-danger small-text">
                         {{ message }}
                     </div>
                 {% elif message.tags == "warning" %}
-                    <div class="alert alert-warning small-text"}>
+                    <div class="alert alert-warning small-text">
                         {{ message }}
                     </div>
                 {% else %}
-                    <div class="alert alert-primary small-text"}>
+                    <div class="alert alert-primary small-text">
                         {{ message }}
                     </div>
                 {% endif %}
