added audio mode

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -17,6 +17,7 @@
         {% else %}
         <div class="medium-text"><a href="/login/">login</a></div>
         {% endif %}
+        <div class="medium-text"><a href="/togglemode/">toggle audio/video mode</a></div>
     </div>
     <div class="col-sm-12 small-text" style="text-align: center; position: fixed; bottom: 0">
         <a href="https://github.com/urlordjames/musicserver">licensed under MIT by urlordjames</a>
