--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -6,18 +6,20 @@
     <div style="text-align: center">
         <h1 class="big-text">media server</h1>
         {% if username %}
-        <div class="small-text">you are currently logged in as {{ username }}</div>
+        <p class="small-text">you are currently logged in as {{ username }}</p>
         {% endif %}
-        <div class="medium-text"><a href="/publicmedia/">public media list</a></div>
-        {% if request.user.is_authenticated %}
-        <div class="medium-text"><a href="/mymedia/">your media</a></div>
-        <div class="medium-text"><a href="/upload/">upload new media</a></div>
-        <div class="medium-text"><a href="/logout/">logout</a></div>
-        <div class="medium-text"><a href="/resetpassword/">reset password</a></div>
-        {% else %}
-        <div class="medium-text"><a href="/login/">login</a></div>
-        {% endif %}
-        <div class="medium-text"><a href="/togglemode/">toggle audio/video mode</a></div>
+        <nav class="medium-text">
+            <a href="/publicmedia/">public media list</a><br>
+            {% if request.user.is_authenticated %}
+            <a href="/mymedia/">your media</a><br>
+            <a href="/upload/">upload new media</a><br>
+            <a href="/logout/">logout</a><br>
+            <a href="/resetpassword/">reset password</a><br>
+            {% else %}
+            <a href="/login/">login</a><br>
+            {% endif %}
+            <a href="/togglemode/">toggle audio/video</a><br>
+        </nav>
     </div>
     <div class="col-sm-12 small-text" style="text-align: center; position: fixed; bottom: 0">
         <a href="https://github.com/urlordjames/musicserver">licensed under MIT by urlordjames</a>
