--- a/homepage/templates/passwordreset.html
+++ b/homepage/templates/passwordreset.html
@@ -9,9 +9,11 @@
     <form action="/resetpassword/" method="POST">
         {% csrf_token %}
         <div class="container">
-            <div class="form-group">
+            <div class="mb-3">
                 <label class="small-text" for="oldpassword">Old Password:</label>
                 <input class="form-control" type="password" id="oldpassword" name="oldpassword" required>
+            </div>
+            <div class="mb-3">
                 <label class="small-text" for="password">New Password:</label>
                 <input class="form-control" type="password" id="password" name="password" required>
             </div>
