--- a/homepage/templates/form.html
+++ b/homepage/templates/form.html
@@ -21,7 +21,9 @@
             <input type="file" name="mediafile" required>
         </div>
         {% endif %}
-        <input type="submit" class="btn btn-primary" value="{{ action }}">
+        <div class="mb-3">
+            <input type="submit" class="btn btn-primary" value="{{ action }}">
+        </div>
     </div>
 </form>
 {% endblock %}
