--- a/homepage/templates/passwordreset.html
+++ b/homepage/templates/passwordreset.html
@@ -17,7 +17,9 @@
                 <label class="small-text" for="password">New Password:</label>
                 <input class="form-control" type="password" id="password" name="password" required>
             </div>
-            <input type="submit" class="btn btn-danger" value="Reset Password">
+            <div class="mb-3">
+                <input type="submit" class="btn btn-danger" value="Reset Password">
+            </div>
         </div>
     </form
 {% endblock %}
